@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Remove duplicate and incorrect expdate method from Authorize.net [cody]
+#
 # * Allow authorization and purchase using a billing_id retrieved from TrustCommerce citadel [jesse.c.scott]
 #
 # * Don't return a frozen string from CreditCard.type? [cody]
